tests/agl/rejections/type/call_unknown_named_arg.agl
def greet(name: text) -> text = "hi"
greet(name: "Bob", extra: 1)
